# Pandaworldmonitor

./: .env.example  CLAUDE.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: types.ts
frontend/src/components/map/: MapView.tsx
frontend/src/components/panels/: Panels.tsx
frontend/src/components/panels/__tests__/: WatchlistPanel.test.tsx
frontend/src/hooks/: useBriefHistory.ts  useDashboardState.ts  useGdeltSearch.ts  useMapLayers.ts  useOpsData.ts
frontend/src/hooks/__tests__/: useDashboardState.test.tsx
scripts/: smoke_e2e.sh
sentinel/: config.py  main.py
sentinel/analysis/: __init__.py  classifier.py
sentinel/api/: server.py
sentinel/data/: feeds.json  keywords.json  military_bases.json
sentinel/models/: __init__.py  dashboard.py  events.py  geo.py  intelligence.py  news.py  watchlist.py
sentinel/pipeline/: pipeline.py  scheduler.py
sentinel/providers/: __init__.py  base.py  gemini.py  ollama.py  router.py  utils.py
sentinel/storage/: __init__.py  cache.py  db.py
sentinel/tools/: __init__.py  conflict.py  dashboard.py  gdelt.py  infrastructure.py  intelligence.py  natural.py  news.py  watchlist.py
tests/sentinel/: test_api.py  test_cache.py  test_classifier.py  test_config.py  test_db.py  test_mcp_tools.py  test_provider_live.py  test_provider_utils.py  test_watchlist.py
