[project]
name = "sentinel"
version = "0.1.0"
description = "Local-first intelligence backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "aiosqlite>=0.20",
  "apscheduler>=3.10",
  "feedparser>=6.0",
  "google-genai>=1.0",
  "mcp[cli]>=1.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
